<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:transitionName="@string/main_shared_bottom_toolbar"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/transparent"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/bottom_toolbar_peek_height"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ru.adminmk.myawesomestore.view.custom_view.BottomHanger
        android:layout_width="100dp"
        android:layout_height="24dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="1dp"
        android:elevation="12dp"
        app:mainPaint="@color/white" />

    <View
        android:layout_width="48dp"
        android:layout_height="5dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/ic_bottom_handler"
        android:elevation="12dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_rounded_half_square_r12"
        android:backgroundTint="@color/white"
        android:elevation="12dp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/bttnHome"
                style="@style/TextView.MetropolisRegular.10BottomToolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:button="@android:color/transparent"
                android:drawableTop="@drawable/ic_bottom_bar_home"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/bottom_toolbar_home"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <RadioButton
                android:id="@+id/bttnShop"
                style="@style/TextView.MetropolisRegular.10BottomToolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:button="@android:color/transparent"
                android:drawableTop="@drawable/ic_bottom_bar_shop"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/bottom_toolbar_shop"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <RadioButton
                android:id="@+id/bttnBag"
                style="@style/TextView.MetropolisRegular.10BottomToolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:button="@android:color/transparent"
                android:drawableTop="@drawable/ic_bottom_bar_bag"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/bottom_toolbar_bag"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <RadioButton
                android:id="@+id/bttnFav"
                style="@style/TextView.MetropolisRegular.10BottomToolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:button="@android:color/transparent"
                android:drawableTop="@drawable/ic_bottom_bar_fav"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/bottom_toolbar_favorites"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <RadioButton
                android:id="@+id/bttnProfile"
                style="@style/TextView.MetropolisRegular.10BottomToolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:button="@android:color/transparent"
                android:drawableTop="@drawable/ic_bottom_bar_profile"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/bottom_toolbar_profile"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        </RadioGroup>
    </FrameLayout>
</FrameLayout>
