<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/categoriesRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionGroup="true"
        android:visibility="gone"
        tools:visibility="visible">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll"
                app:titleEnabled="false">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    app:menu="@menu/search_menu"
                    app:navigationIcon="@drawable/ic_back">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/TextView.MetropolisSemiBold.Title18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="12dp"
                        android:text="@string/categories_header"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.appcompat.widget.Toolbar>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/topCategoriesHolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="8dp"
                        android:layout_marginTop="48dp"
                        android:background="@drawable/dropshadow"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/womanCategorie"
                        style="@style/TopCategorieBorderlessTextButton"
                        android:layout_width="0dp"
                        android:layout_height="44dp"
                        android:layout_marginTop="52dp"
                        android:text="@string/women_categorie_header"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toStartOf="@+id/manCategorie"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TouchTargetSizeCheck" />

                    <Button
                        android:id="@+id/kidsCategorie"
                        style="@style/TopCategorieBorderlessTextButton"
                        android:layout_width="0dp"
                        android:layout_height="44dp"
                        android:layout_marginTop="52dp"
                        android:text="@string/kids_categorie_header"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/manCategorie"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TouchTargetSizeCheck" />

                    <Button
                        android:id="@+id/manCategorie"
                        style="@style/TopCategorieBorderlessTextButton"
                        android:layout_width="0dp"
                        android:layout_height="44dp"
                        android:layout_marginTop="52dp"
                        android:text="@string/men_categorie_header"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toStartOf="@+id/kidsCategorie"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/womanCategorie"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TouchTargetSizeCheck" />

                    <View
                        android:id="@+id/selectPlank"
                        android:layout_width="0dp"
                        android:layout_height="3dp"
                        android:background="@color/sale"
                        app:layout_constraintEnd_toEndOf="@+id/womanCategorie"
                        app:layout_constraintStart_toStartOf="@+id/womanCategorie"
                        app:layout_constraintTop_toBottomOf="@+id/womanCategorie" />

                    <Button
                        android:id="@+id/bttnSale"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:backgroundTint="@color/sale"
                        android:elevation="4dp"
                        app:cornerRadius="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/selectPlank"
                        tools:ignore="TextContrastCheck"
                        tools:text="SUMMER SALES" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categoriesRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            tools:ignore="SpeakableTextPresentCheck"
            tools:itemCount="7"
            tools:listitem="@layout/list_item_categorie" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <include
        android:id="@+id/categoriesShimmer"
        layout="@layout/fragment_categories_shimmer"
        tools:visibility="gone" />
</FrameLayout>
